--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +11,45 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <div class="nav-1">
+                <a href="#"> News</a>
+                <a href="#"> Events</a>
+                <a href="#"> Business</a>
+                <a href="#"> AMAs</a>
+                <a href="#"> Spaces</a>
+                <a href="#"> Terms & Conditions</a>
+            </div>
+            <div class="nav-2">
+                <a href="#"> LATEST </a>
+                <a href="#"> HARD FORK </a>
+                <a href="#"> PLUGGED </a>
+                <a href="#"> THE NEXT POLICE </a>
+                <a href="#"> FUNDAMENTALS </a>
+                <a href="#"> IOT LAB </a>
+                <a href="#"> WORK2030 </a>
+
+                <div class="nav-2-right">
+                    <a href="#"> <img src="resource/images/search-2-16.png" alt="the search icon"></a>
+                    <img src="resource/images/conf-ams17-logo-red.svg" alt=" TNW logo">
+                    <span> IS HAPPENING NOW!</span>
+                    <button type="button" name="button"> WATCH IT LIVE!</button>
+                </div>
+            </div>
+            <div class="nav-3">
+                <p> TNW Conference starts NOW! Tune in to the livestream to watch → </p>
+            </div>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
