--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
     <header>
+        <!-- Header Section -->
         <nav>
             <div class="nav-1">
                 <a href="#"> News</a>
@@ -45,6 +46,37 @@
         </nav>
     </header>
     <main>
+        <!-- Section 1 -->
+         <section class="section-a">
+             <div class="section-a-image">
+                 <div class="section-a-1">
+                     <img src="resource/images/tnw-overlay.svg" alt="tnw overlay " width="150px" height="100px">
+                     <h1>Follow the livestream of TNW Conference 2019 here</h1>
+                     <p>by Alejandro Tauber 
+                            <img src="resource/images/time-8-16.png" alt="clock-icon">
+                            1 day ago 
+                            <img src="resource/images/sharethis-16.png" alt="share-icon">
+                            2
+
+                     </p>
+                    
+
+
+                 </div>
+                 <div class="section-a-2">
+                     
+
+                 </div>
+                 <div class="section-a-3">
+
+                 </div>
+             </div>
+
+         </section>
+
+
+
+
 
     </main>
     <footer>
