posts section added

--- a/index.html
+++ b/index.html
@@ -47,32 +47,93 @@
     </header>
     <main>
         <!-- Section 1 -->
-         <section class="section-a">
-             <div class="section-a-image">
-                 <div class="section-a-1">
-                     <img src="resource/images/tnw-overlay.svg" alt="tnw overlay " width="150px" height="100px">
-                     <h1>Follow the livestream of TNW Conference 2019 here</h1>
-                     <p>by Alejandro Tauber 
-                            <img src="resource/images/time-8-16.png" alt="clock-icon">
-                            1 day ago 
-                            <img src="resource/images/sharethis-16.png" alt="share-icon">
-                            2
+        <section class="section-a">
+            <div class="section-a-image">
+                <div class="section-a-1">
+                    <img src="resource/images/tnw-overlay.svg" alt="tnw overlay " width="150px" height="100px">
+                    <h1>Follow the livestream of TNW Conference 2019 here</h1>
+                    <p>by Alejandro Tauber
+                        <img src="resource/images/time-8-16.png" alt="clock-icon"> 1 day ago
+                        <img src="resource/images/sharethis-16.png" alt="share-icon"> 2
 
-                     </p>
-                    
+                    </p>
+                    <div class="section-a-2">
+                        <p> INSIGHT</p>
+                        <h1> The 2019 Global Startup Ecosystem Lunches at TNW2019</h1>
+                        <p>by Ailsa Sherrington
+                            <img src="resource/images/time-8-16.png" alt="clock-icon"> 1 day ago
+                            <img src="resource/images/sharethis-16.png" alt="share-icon"> 6
+                        </p>
+                    </div>
+                    <div class="section-a-3">
+                        <p> </p>
+                        <h1>Bumble’s Louise Troen on censoring dick pics using AI
+                        </h1>
+                        <p> by Cara Curtis 1 day ago
+                            <img src="resource/images/time-8-16.png" alt="clock-icon"> 1 day ago
+                            <img src="resource/images/sharethis-16.png" alt="share-icon"> 22
+                        </p>
+                    </div>
+                </div>
+        </section>
+        <!-- the section 2 -->
+        <section class="section-b">
+            <h1> Latest news > </h1>
+            <div class="section-b-main-div">
 
+                <div class="section-b-1">
+                    <img src="resource/images/img-1.png" alt="first image">
+                    <a href="#"> The Mill's Rama Allen is live at TNW2019 – tune in now!
+                    </a>
+                    <p> <a href="#"> Abhimanyu Ghosha </a> 15 minutes ago</p>
+                </div>
+                <div class="section-b-2">
+                    <img src="resource/images/img-2.png" alt="second image">
+                    <a href="#">AI avatars could be the next generation's favorite entertainers
+                    </a>
+                    <p> <a href="#"> Ivan Mehta </a>14 minutes ago</p>
+                </div>
+                <div class="section-b-3">
+                    <img src="resource/images/img-3.png" alt=" third image">
+                    <a href="#"> How to combat human trafficking with data science
+                    </a>
+                    <p> <a href="#"> Abhimanyu Ghoshal</a>17 minutes ago</p>
+                </div>
+                <div class="section-b-4">
+                    <img src="resource/images/img-4.png" alt=" fourth image">
+                    <a href="#">This cool gas technology could kill 99.9% of deadly germs in the air
+                    </a>
+                    <p> <a href="#"> The Conversation</a> 45 minutes ago</p>
+                </div>
+                <div class="section-b-5">
+                    <img src="resource/images/img-5.png" alt="fifth image">
+                    <a href="#"> It's the algorithm's world (we're just living in it)
+                    </a>
+                    <p> <a href="#"> Matthew Hughes</a> 2 hours ago </p>
+                </div>
+                <div class="section-b-6">
+                    <img src="resource/images/img-6.png" alt="sixth image">
+                    <a href="#"> Author of GIGGED, Sarah Kessler, is sharing her thoughts on the gig economy - tune in now!
+                    </a>
+                    <p> <a href="#">Már Másson Maack</a> 2 hours ago </p>
+                </div>
+                <div class="section-b-7">
+                    <img src="resource/images/img-7.png" alt="seventh image">
+                    <a href="#"> Your business passed the GDPR challenge — but SCA is next
+                    </a>
+                    <p> <a href="#"> Guillaume Princen</a> 2 hours ago </p>
+                </div>
+                <div class="section-b-8">
+                    <img src="resource/images/img-8.png" alt="eighth image">
+                    <a href="#"> Business Operations and Ethics: 11 Technologies to Watch
+                    </a>
+                    <p> <a href="#"> Scott Gerber</a> 2 hours ago </p>
+                </div>
 
-                 </div>
-                 <div class="section-a-2">
-                     
+            </div>
 
-                 </div>
-                 <div class="section-a-3">
+        </section>
 
-                 </div>
-             </div>
-
-         </section>
 
 
 
