--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
         <!-- Header Section -->
         <nav>
             <div class="nav-logo-image">
-                <img id="mobile-logo" src="resource/images/tnw-overlay.svg" alt="tnw overlay"  >
+                <div class="mobile-logo-image">
+                    <div class="image-container">
+                        <img src="resource/images/tnw-overlay.svg" alt="tnw overlay"  >
+                    </div>
+                </div>
+                
                 <a href="#"> <img src="resource/images/search-2-16.png" alt="the search icon"></a>
                 <a href="#"><img src="resource/images/menu-4-16.png" alt="menu icon"></a>
                 
