headline section added

--- a/index.html
+++ b/index.html
@@ -64,33 +64,35 @@
     <main>
         <!-- Section 1 -->
         <section class="section-a">
-            <div class="section-a-image">
-                <div class="section-a-1">
-                    <img src="resource/images/tnw-overlay.svg" alt="tnw overlay " width="150px" height="100px">
-                    <h1>Follow the livestream of TNW Conference 2019 here</h1>
-                    <p>by Alejandro Tauber
-                        <img src="resource/images/time-8-16.png" alt="clock-icon"> 1 day ago
-                        <img src="resource/images/sharethis-16.png" alt="share-icon"> 2
+            
+            <div class="section-a-1">
+                <img id="resize" src="resource/images/tnw-overlay.svg" alt="tnw overlay" >
+                <p class="insights"> INSIGHTS</p>
+                <h1>Follow the livestream of TNW Conference 2019 here</h1>
+                <p class="written-by">by Alejandro Tauber
+                    <img class="space-image" src="resource/images/time-8-16.png" alt="clock-icon"> 1 day ago
+                    <img class="space-image" src="resource/images/sharethis-16.png" alt="share-icon"> 2
 
-                    </p>
-                    <div class="section-a-2">
-                        <p> INSIGHTS</p>
-                        <h1> The 2019 Global Startup Ecosystem Lunches at TNW2019</h1>
-                        <p>by Ailsa Sherrington
-                            <img src="resource/images/time-8-16.png" alt="clock-icon"> 1 day ago
-                            <img src="resource/images/sharethis-16.png" alt="share-icon"> 6
-                        </p>
-                    </div>
-                    <div class="section-a-3">
-                        <p> </p>
-                        <h1>Bumble’s Louise Troen on censoring dick pics using AI
-                        </h1>
-                        <p> by Cara Curtis 1 day ago
-                            <img src="resource/images/time-8-16.png" alt="clock-icon"> 1 day ago
-                            <img src="resource/images/sharethis-16.png" alt="share-icon"> 22
-                        </p>
-                    </div>
-                </div>
+                </p>
+            </div>
+            <div class="section-a-2">
+                <p class="insights"> INSIGHTS</p>
+                <h1> The 2019 Global Startup Ecosystem Lunches at TNW2019</h1>
+                <p class="written-by"> by Ailsa Sherrington
+                    <img class="space-image" src="resource/images/time-8-16.png" alt="clock-icon"> 1 day ago
+                    <img class="space-image" src="resource/images/sharethis-16.png" alt="share-icon"> 6
+                </p>
+            </div>
+            <div class="section-a-3">
+                <p class="insights"> INSIGHTS </p>
+                <h1>Bumble’s Louise Troen on censoring dick pics using AI
+                </h1>
+                <p class="written-by"> by Cara Curtis 1 day ago
+                    <img class="space-image" src="resource/images/time-8-16.png" alt="clock-icon"> 1 day ago
+                    <img class="space-image" src="resource/images/sharethis-16.png" alt="share-icon"> 22
+                </p>
+            </div>
+        
         </section>
         <!-- the section 2 -->
         <section class="section-b">
