funding rounds css added

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </section>
         <!-- the section 2 -->
         <section class="section-b">
-            <h1> Latest news > </h1>
+            <h1 class="heading-style"> Latest news > </h1>
             <div class="section-b-main-div">
 
                 <div class="section-b-1">
@@ -155,10 +155,13 @@
         <!-- Section 3 -->
         <section class="section-c">
             <div class="section-c-1">
-                <a href="#">Latest funding rounds on Index.co ></a>
-                <a href="#">Add Info |</a>
-                <a href="#">Get updates by email |</a>
-                <a href="#">See more</a>
+                <a href="#" class="heading-style">Latest funding rounds on Index.co ></a>
+                <div class="small-info">
+                    <a href="#" >Add Info </a>
+                    <a href="#">Get updates by email </a>
+                    <a href="#" >See more</a>
+                 </div>
+                
             </div>
             <div class="section-c-2">
                 <div class="funding-1">
@@ -168,7 +171,7 @@
                     </p>
                     <p><img src="https://img.icons8.com/ios/16/000000/business-filled.png" alt="briefcase icon"> Mistletoe, +5
                     </p>
-                    <p>Agritech Focused VC Omnivore Closes Second Fund At $97 Mn on Inc42</p>
+                    <p class="border-top">Agritech Focused VC Omnivore Closes Second Fund At $97 Mn on Inc42</p>
 
                 </div>
                 <div class="funding-2">
@@ -178,10 +181,11 @@
 
                     </p>
                     <p>
-                        <img src="https://img.icons8.com/ios/16/000000/business-filled.png" alt="briefcase icon"> Strategic Healthcare Investment Partners
+                        <img src="https://img.icons8.com/ios/16/000000/business-filled.png" alt="briefcase icon"> Strategic Healthcare Investment 
+                        <p id="partners">Partners</p>
 
                     </p>
-                    <p>NeoChord Raises Additional $7M in Series D Financing on FinSMEs</p>
+                    <p class="border-top">NeoChord Raises Additional $7M in Series D Financing on FinSMEs</p>
 
                 </div>
                 <div class="funding-3">
@@ -194,7 +198,7 @@
                         <img src="https://img.icons8.com/ios/16/000000/business-filled.png" alt="briefcase icon"> Softbank Group Corp
 
                     </p>
-                    <p>Wirecard lands $1 billion investment from Japan's Softbank: Reuters on PE Hub</p>
+                    <p class="border-top">Wirecard lands $1 billion investment from Japan's Softbank: Reuters on PE Hub</p>
 
                 </div>
                 <div class="funding-4">
@@ -207,7 +211,7 @@
                         <img src="https://img.icons8.com/ios/16/000000/business-filled.png" alt="briefcase icon"> Carroll Capital LLC
 
                     </p>
-                    <p>Carroll Capital leads Tellus Series B on PE Hub</p>
+                    <p class="border-top">Carroll Capital leads Tellus Series B on PE Hub</p>
 
                 </div>
             </div>
@@ -217,7 +221,7 @@
         <section class="section-d">
             <div class="headlines">
                 <div class="main-headline-1">
-                    <h1>Apps ></h1>
+                    <h1 class="heading-style">Apps ></h1>
                     <div class="headline-1">
                         <h2>MOST POPULAR</h2>
                         <h1>AI avatars could be the next generation's favorite entertainers</h1>
@@ -247,7 +251,7 @@
                     </div>
                 </div>
                 <div class="main-headline-2">
-                    <h1>Gear ></h1>
+                    <h1 class="heading-style">Gear ></h1>
                     <div class="headline-2">
                         <h2>MOST POPULAR</h2>
                         <h1>CHEAP: Anker's excellent Soundcore Space NC headphones are $20 off</h1>
@@ -278,7 +282,7 @@
                     </div>
                 </div>
                 <div class="main-headline-3">
-                    <h1>Tech ></h1>
+                    <h1 class="heading-style">Tech ></h1>
                     <div class="headline-3">
                         <h2>MOST POPULAR</h2>
                         <h1>Dropbox Chief of Staff: Diversity and inclusion begin with hiring</h1>
@@ -309,7 +313,7 @@
                     </div>
                 </div>
                 <div class="main-headline-4">
-                    <h1>Creative ></h1>
+                    <h1 class="heading-style">Creative ></h1>
                     <div class="headline-4">
                         <h2>MOST POPULAR</h2>
                         <h1>Who are the creators of AI-generated art — programmers or machines?</h1>
@@ -340,7 +344,7 @@
                     </div>
                 </div>
                 <div class="main-headline-5">
-                    <h1>Podium ></h1>
+                    <h1 class="heading-style">Podium ></h1>
                     <div class="headline-5">
                         <h2>MOST POPULAR</h2>
                         <h1>Here's how working with VCs can make you more than just money</h1>
@@ -371,7 +375,7 @@
                     </div>
                 </div>
                 <div class="main-headline-6">
-                    <h1>Insights ></h1>
+                    <h1 class="heading-style">Insights ></h1>
                     <div class="headline-6">
                         <h2>MOST POPULAR</h2>
                         <h1>The best co-op games to play with your badass mom on Mother's Day</h1>
@@ -402,7 +406,7 @@
                     </div>
                 </div>
                 <div class="main-headline-7">
-                    <h1>Launch ></h1>
+                    <h1 class="heading-style">Launch ></h1>
                     <div class="headline-7">
                         <h2>MOST POPULAR</h2>
                         <h1>Mozilla rolls out new automated crypto-jacking filtering in Firefox</h1>
@@ -433,7 +437,7 @@
                     </div>
                 </div>
                 <div class="main-headline-8">
-                    <h1>Distract ></h1>
+                    <h1 class="heading-style">Distract ></h1>
                     <div class="headline-8">
                         <h2>MOST POPULAR</h2>
                         <h1>Tencent's Chinese PUBG dupe has enemies who wave after you shoot them</h1>
@@ -467,7 +471,7 @@
         </section>
         <!-- Section 5 -->
         <section class="section-e">
-            <h1>Latest Deals ></h1>
+            <h1 class="heading-style">Latest Deals ></h1>
             <a href="#">See all Deals</a>
             <div class="latest-main">
                 <div class="latest1">
