headlines section css done

--- a/index.html
+++ b/index.html
@@ -279,19 +279,19 @@
                         <div class="sub-pointers">     
                             <ul>
                                 <li>
-                                    Google launches its cheaper Pixel 3a and 3a XL phones with flagship cameras
+                                    <a href="#">Google launches its cheaper Pixel 3a and 3a XL phones with flagship cameras</a>
                                 </li>
                                 <li>
-                                    House of Marley's $200 headphones are as comfortable as they are stylish
+                                    <a href="#">House of Marley's $200 headphones are as comfortable as they are stylish</a>
                                 </li>
                                 <li>
-                                    Apple's iOS 13 slated to focus on replacing other companies' apps
+                                    <a href="#">Apple's iOS 13 slated to focus on replacing other companies' apps</a>
                                 </li>
                                 <li>
-                                    CHEAP: Savor this abundance of succulent SanDisk storage savings
+                                    <a href="#">CHEAP: Savor this abundance of succulent SanDisk storage savings</a>
                                 </li>
                                 <li>
-                                    Watch: This hacked Roomba swears every time it hits an object, and it’s hilarious
+                                    <a href="#">Watch: This hacked Roomba swears every time it hits an object, and it’s hilarious</a>
                                 </li>
                             </ul>
                         </div>
@@ -313,19 +313,19 @@
                         <div class="sub-pointers">
                             <ul>
                                 <li>
-                                    Author of GIGGED, Sarah Kessler, is sharing her thoughts on the gig economy - tune in now!
+                                    <a href="#">Author of GIGGED, Sarah Kessler, is sharing her thoughts on the gig economy - tune in now!</a>
                                 </li>
                                 <li>
-                                    Dropbox Chief of Staff: Diversity and inclusion begin with hiring
+                                    <a href="#">Dropbox Chief of Staff: Diversity and inclusion begin with hiring</a>
                                 </li>
                                 <li>
-                                    Study: Biodegradable bags aren’t as biodegradable as you first thought
+                                    <a href="#">Study: Biodegradable bags aren’t as biodegradable as you first thought</a>
                                 </li>
                                 <li>
-                                    Study: Biodegradable bags aren’t as biodegradable as you first thought
+                                    <a href="#">Study: Biodegradable bags aren’t as biodegradable as you first thought</a>
                                 </li>
                                 <li>
-                                    John Hegarty: 90 percent of content is crap
+                                    <a href="#">John Hegarty: 90 percent of content is crap</a>
                                 </li>
                             </ul> 
                         </div>  
@@ -351,19 +351,19 @@
                         
                             <ul>
                                 <li>
-                                    A Q&A with Roland CEO Jun-ichi Miki on innovation, Waku Waku, and 'sleeping musicians'
+                                    <a href="#">A Q&A with Roland CEO Jun-ichi Miki on innovation, Waku Waku, and 'sleeping musicians'</a>
                                 </li>
                                 <li>
-                                    AI rejects conservative human views on furniture, designs wacky chair
+                                    <a href="#">AI rejects conservative human views on furniture, designs wacky chair</a>
                                 </li>
                                 <li>
-                                    9 design ideas for the future of digital dating
+                                    <a href="#">9 design ideas for the future of digital dating</a>
                                 </li>
                                 <li>
-                                    ContentsDeal project is putting copyright on the blockchain
+                                    <a href="#">ContentsDeal project is putting copyright on the blockchain</a>
                                 </li>
                                 <li>
-                                    Why designers create products that are never meant to be real
+                                    <a href="#">Why designers create products that are never meant to be real</a>
                                 </li>
                             </ul>
                         </div>
@@ -388,19 +388,19 @@
                         <div class="sub-pointers">
                             <ul>
                                 <li>
-                                    Business Operations and Ethics: 11 Technologies to Watch
+                                    <a href="#">Business Operations and Ethics: 11 Technologies to Watch</a>
                                 </li>
                                 <li>
-                                    Your brand can learn a lot from how MLB changed how it sells tickets
+                                    <a href="#">Your brand can learn a lot from how MLB changed how it sells tickets</a>
                                 </li>
                                 <li>
-                                    How toxic company culture is derailing billion-dollar M&As
+                                    <a href="#">How toxic company culture is derailing billion-dollar M&As</a>
                                 </li>
                                 <li>
-                                    Here's how working with VCs can make you more than just money
+                                    <a href="#">Here's how working with VCs can make you more than just money</a>
                                 </li>
                                 <li>
-                                    Before developers build cathedrals, teach them to build sheds
+                                    <a href="#">Before developers build cathedrals, teach them to build sheds</a>
                                 </li>
                             </ul>
                          </div>
@@ -426,19 +426,19 @@
                         <div class="sub-pointers">
                             <ul>
                                 <li>
-                                    eToro's Yoni Assia is live at TNW2019 – tune in now!
+                                    <a href="#">eToro's Yoni Assia is live at TNW2019 – tune in now!</a>
                                 </li>
                                 <li>
-                                    Francis Pouliot separates Bitcoin from blockchain
+                                    <a href="#">Francis Pouliot separates Bitcoin from blockchain</a>
                                 </li>
                                 <li>
-                                    IOTA's Dominik Schiener is live at TNW2019 – tune in now!
+                                    <a href="#">IOTA's Dominik Schiener is live at TNW2019 – tune in now!</a>
                                 </li>
                                 <li>
-                                    How to save the planet? Milkmen had the answer all along
+                                    <a href="#">How to save the planet? Milkmen had the answer all along</a>
                                 </li>
                                 <li>
-                                    Futurist and filmmaker Ian Khan is live at TNW2019 – tune in now!
+                                    <a href="#">Futurist and filmmaker Ian Khan is live at TNW2019 – tune in now!</a>
                                 </li>
                             </ul>
                         </div>
@@ -463,19 +463,19 @@
                         <div class="sub-pointers">
                             <ul>
                                 <li>
-                                    Binance will let you buy Bitcoin with cash from 1,300 stores in Australia
+                                    <a href="#">Binance will let you buy Bitcoin with cash from 1,300 stores in Australia</a>
                                 </li>
                                 <li>
-                                    YouTube Music launches in India to battle it out with Spotify et al
+                                    <a href="#">YouTube Music launches in India to battle it out with Spotify et al</a>
                                 </li>
                                 <li>
-                                    Ballsy mobile devs can now monetize their games with cryptocurrency
+                                    <a href="#">Ballsy mobile devs can now monetize their games with cryptocurrency</a>
                                 </li>
                                 <li>
-                                    Harley-Davidson debuts its all-electric 'LiveWire' motorcycle at CES
+                                    <a href="#">Harley-Davidson debuts its all-electric 'LiveWire' motorcycle at CES</a>
                                 </li>
                                 <li>
-                                    BitTorrent just launched a TRON-based cryptocurrency token
+                                    <a href="#">BitTorrent just launched a TRON-based cryptocurrency token</a>
                                 </li>
                             </ul>
                         </div>
@@ -500,19 +500,19 @@
                         <div class="sub-pointers">
                             <ul>
                                 <li>
-                                    EA seeks fresh blood for Apex Legends in mobile market
+                                    <a href="#">EA seeks fresh blood for Apex Legends in mobile market</a>
                                 </li>
                                 <li>
-                                    Sony offers EA Access to PS4 owners, 5 years after the Xbox One
+                                    <a href="#">Sony offers EA Access to PS4 owners, 5 years after the Xbox One</a>
                                 </li>
                                 <li>
-                                    Here are the Star Wars games on sale for May the 4th
+                                    <a href="#">Here are the Star Wars games on sale for May the 4th</a>
                                 </li>
                                 <li>
-                                    Xbox enshrines wholesome 'trash talk' in its community standards
+                                    <a href="#">Xbox enshrines wholesome 'trash talk' in its community standards</a>
                                 </li>
                                 <li>
-                                    Hitting the gym makes esports athletes more successful
+                                    <a href="#">Hitting the gym makes esports athletes more successful</a>
                                 </li>
                             </ul>
                         </div>
