latest deals css

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     <div class="headline-1-content">
                         <div class="latest-image">
                             <img src="resource/images/small-image1.png" alt=" small image1">
-                            <p class="latest1">LATEST</p>
+                            <p class="latest-news">LATEST</p>
                             <p>CHEAP: Let Sennheiser’s Wireless headphones cup your ears with love for just $100</p>
 
                         </div>
@@ -271,7 +271,7 @@
                     <div class="headline-2-content">
                         <div class="latest-image">
                             <img src="resource/images/small-image2.png" alt="second small image">
-                            <p class="latest1">LATEST</p>
+                            <p class="latest-news">LATEST</p>
                             <p>Logitech makes its G502 gaming mouse all but perfect with lighter wireless design</p>
                         </div>
 
@@ -307,7 +307,7 @@
                     <div class="headline-3-content">
                         <div class="latest-image">
                             <img src="resource/images/small-image3.png" alt="third small image">
-                            <p class="latest1">LATEST</p>
+                            <p class="latest-news">LATEST</p>
                             <p>This cool gas technology could kill 99.9% of deadly germs in the air</p>
                         </div>
                         <div class="sub-pointers">
@@ -341,7 +341,7 @@
                     <div class="headline-4-content">
                         <div class="latest-image">
                             <img src="resource/images/small-image4.png" alt="fourth image">
-                            <p class="latest1">LATEST</p>
+                            <p class="latest-news">LATEST</p>
 
                             <p>
                                 A Twitter bot that translates jungle sounds to existential questions might just help save the
@@ -379,7 +379,7 @@
                     <div class="headline-5-content">
                         <div class="latest-image">
                             <img src="resource/images/small-image5.png" alt="fifth small image">
-                            <p class="latest1">LATEST</p>
+                            <p class="latest-news">LATEST</p>
                             <p>
                                 Your business passed the GDPR challenge — but SCA is next
 
@@ -418,7 +418,7 @@
                     <div class="headline-6-content">
                         <div class="latest-image">
                             <img src="resource/images/small-image6.png" alt="sixth small image">
-                            <p class="latest1">LATEST</p>
+                            <p class="latest-news">LATEST</p>
                             <p>
                                 Larry Sanger hides 'blockchain' on Everipedia to keep users comfortable
                             </p>
@@ -454,7 +454,7 @@
                     <div class="headline-7-content">
                         <div class="latest-image">
                             <img src="resource/images/small-image7.png" alt="seventh small img">
-                            <p class="latest1">LATEST</p>
+                            <p class="latest-news">LATEST</p>
                             <p>
                                 Google announces Stadia, its cross-platform game streaming service
 
@@ -491,7 +491,7 @@
                     <div class="headline-8-content">
                         <div class="latest-image">
                             <img src="resource/images/small-image8.png" alt="eight small image">
-                            <p class="latest1">LATEST</p>
+                            <p class="latest-news">LATEST</p>
                             <p>
                                 American senator pleads for children's protection in anti-lootbox bill
 
@@ -522,56 +522,59 @@
         </section>
         <!-- Section 5 -->
         <section class="section-e">
-            <h1 class="heading-style">Latest Deals ></h1>
-            <a href="#">See all Deals</a>
+            <div class="section-e-header">
+                <a href="#" class="heading-style">Latest Deals ></a>
+                <a href="#">See all Deals</a>
+            </div>
+            
             <div class="latest-main">
                 <div class="latest1">
                     <img src="resource/images/digital1.png" alt="latest deal 1">
                     <p>VPN Unlimited: Lifetime Subscription</p>
-                    <p><span>$499.99</span> $39</p>
+                    <p class="offer-price"><span>$499.99</span> $39</p>
 
                 </div>
                 <div class="latest2">
                     <img src="resource/images/digital2.png" alt="latest deal 2">
                     <p>The Cloud Computing Architect Certification Bundle</p>
-                    <p><span>$1476</span> $39</p>
+                    <p class="offer-price"> <span>$1476</span> $39</p>
 
                 </div>
                 <div class="latest3">
                     <img src="resource/images/digital3.png" alt="latest deal 3">
                     <p>The Certified Big Data Mastery Bundle</p>
-                    <p><span>$1399</span> $59</p>
+                    <p class="offer-price"><span>$1399</span> $59</p>
 
 
                 </div>
                 <div class="latest4">
                     <img src="resource/images/digital4.png" alt="latest deal 4">
                     <p>Ultimate Cisco Certification Super Bundle: Lifetime Access</p>
-                    <p><span>$3285</span> $49</p>
+                    <p class="offer-price"><span>$3285</span> $49</p>
 
                 </div>
                 <div class="latest5">
                     <img src="resource/images/digital5.png" alt="latest deal 5">
                     <p>StackSkills Unlimited: Lifetime Access</p>
-                    <p><span>$1495</span> $59</p>
+                    <p class="offer-price"><span>$1495</span> $59</p>
 
                 </div>
                 <div class="latest6">
                     <img src="resource/images/digital6.png" alt="latest deal 6">
                     <p>The Foundational Cisco CCNA Security Bundle</p>
-                    <p><span>$897</span> $29</p>
+                    <p class="offer-price"><span>$897</span> $29</p>
 
                 </div>
                 <div class="latest7">
                     <img src="resource/images/digital7.png" alt="latest deal 7">
                     <p>Microsoft Network & Security Fundamentals Certification Bundle</p>
-                    <p><span>$100</span> $14.99</p>
+                    <p class="offer-price"><span>$100</span> $14.99</p>
 
                 </div>
                 <div class="latest8">
                     <img src="resource/images/digital8.png" alt="latest deal 8">
                     <p>Ivacy VPN: Lifetime Subscription</p>
-                    <p><span>$1194</span> $33.99</p>
+                    <p class="offer-price"><span>$1194</span> $33.99</p>
 
                 </div>
             </div>
