--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                 <a href="#" class="heading-style">Latest Deals ></a>
                 <a href="#">See all Deals</a>
             </div>
-            
+
             <div class="latest-main">
                 <div class="latest1">
                     <img src="resource/images/digital1.png" alt="latest deal 1">
@@ -585,26 +585,31 @@
     <footer>
         <!-- footer section starts here -->
         <div class="first-footer">
-            <img src="resource/images/soccial-media/facebook.png" alt=" facebook icon">
-            <img src="resource/images/soccial-media/instagram.png" alt="instagram icon">
-            <img src="resource/images/soccial-media/mail.png" alt="mail icon">
-            <img src="resource/images/soccial-media/pinterest.png" alt="pinterest icon">
-            <img src="resource/images/soccial-media/rss.png" alt="feed icon">
-            <img src="resource/images/soccial-media/twitter.png" alt="twitter icon">
-            <img src="resource/images/soccial-media/video-play.png" alt="video-play icon">
+            <div class="footer1">
+                <a href="#"> <img src="resource/images/soccial-media/facebook.png" alt=" facebook icon"></a>
+                <a href="#"> <img src="resource/images/soccial-media/instagram.png" alt="instagram icon"></a>
+                <a href="#"> <img src="resource/images/soccial-media/mail.png" alt="mail icon"></a>
+                <a href="#"> <img src="resource/images/soccial-media/pinterest.png" alt="pinterest icon"></a>
+                <a href="#"><img src="resource/images/soccial-media/rss.png" alt="feed icon"></a>
+                <a href="#"><img src="resource/images/soccial-media/twitter.png" alt="twitter icon"></a>
+                <a href="#"><img src="resource/images/soccial-media/video-play.png" alt="video-play icon"></a>
+            </div>
 
-            <a href="#"> EVENTS </a>
-            <a href="#">ABOUT </a>
-            <a href="#">TEAM </a>
-            <a href="#">ADVERTISE</a>
-            <a href="#"> JOBS </a>
-            <a href="#">CONTACT</a>
-
+            <div class="first-footer-a">
+                <a href="#"> EVENTS </a>
+                <a href="#">ABOUT </a>
+                <a href="#">TEAM </a>
+                <a href="#">ADVERTISE</a>
+                <a href="#"> JOBS </a>
+                <a href="#">CONTACT</a>
+            </div>
         </div>
+
         <div class="second-footer">
             <p>
                 <a href="#"><img src="resource/images/small-logo.png" alt="tnw logo"> </a>
-                © 2006–2019 The Next Web B.V. Made with ❤️ in Amsterdam. Powered by StackPath
+                © 2006–2019 The Next Web B.V. Made with <span>♥</span> in Amsterdam. Powered by <a href="#">
+                StackPath </a>
             </p>
         </div>
 
