--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
         <a href="#"> FUNDAMENTALS </a>
         <a href="#"> IOT LAB </a>
         <a href="#"> WORK2030 </a>
+        <div class="search-icon">
+            <a href="#"> <img src="resource/images/search-2-16.png" alt="the search icon"></a>
+
+        </div>
 
         <div class="nav-2-right">
             <a href="#"> <img src="resource/images/search-2-16.png" alt="the search icon"></a>
